# obsyncit

./: .gitignore  .pre-commit-config.yaml  .pylintrc  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SPEC.md  backup.py  config.sample.toml  config.toml  errors.py  logger.py  main.py  obsync.py  obsync_tui.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.fish  setup.py  sync.py  tox.ini  vault.py
.github/workflows/: ci.yml  python-ci.yml
docs/: configuration.md  developer_guide.md  installation.md  troubleshooting.md  usage.md
obsyncit/: README.md  __init__.py  backup.py  errors.py  logger.py  main.py  obsync.py  obsync_tui.py  sync.py  vault.py  vault_discovery.py
obsyncit/schemas/: README.md  __init__.py  config.py  obsidian.py
schemas/: __init__.py  obsidian.py
scripts/: dev-tools.fish  dev-tools.sh  obsyncit  obsyncit-tui
tests/: README.md  __init__.py  conftest.py  individual_test_scripts.txt  test_backup.py  test_cli.py  test_errors.py  test_json_validation.py  test_logger.py  test_sync.py  test_tui.py  test_utils.py  test_vault_discovery.py
